# haskell-audio-metadata

./: LICENSE  metadata.cabal
Audio/: Metadata.hs
Audio/Metadata/: ID3.hs  Types.hs  VorbisComment.hs
benchmarks/: parsetags.hs
examples/: Refile.hs  refile.cabal
